--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.3.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
