--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_PATH=./
 NEXT_PUBLIC_BUILD_ENV='development'
 NEXT_PUBLIC_REACT_APP_BASE_URL_API='https://restcountries.com/'
+NODE_VERSION='14.8.3'
