--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "env-cmd -f .env next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "next": "12.3.1",
+    "env-cmd": "^10.1.0",
+    "next": "12.0.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,5 +23,8 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "prettier": "2.7.1"
+  },
+  "engines": {
+    "node": ">=12"
   }
 }
