--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "eslint": "8.24.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.3.1",
     "prettier": "2.7.1"
   },
